fix footer logo spacing issue (#1072)

--- a/src/components/footer/_footer.scss
+++ b/src/components/footer/_footer.scss
@@ -28,4 +28,11 @@
       text-decoration: none;
     }
   }
+
+  .poweredbylogo {
+    @include mq('xs', 'm') {
+      width: 100% !important;
+      margin-top: 1.5rem;
+    }
+  }
 }
